[gd_scene load_steps=12 format=2]

[ext_resource path="res://DictList.gd" type="Script" id=1]
[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=2]
[ext_resource path="res://asserts/art/hoverBox.png" type="Texture" id=3]
[ext_resource path="res://DictScene.gd" type="Script" id=4]
[ext_resource path="res://asserts/themes/标题字体.tres" type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="DictScene" type="Node2D"]
script = ExtResource( 4 )

[node name="DictBench" type="Node2D" parent="."]

[node name="BlockButton" type="TextureButton" parent="DictBench"]
margin_left = 144.0
margin_top = 192.0
margin_right = 296.0
margin_bottom = 256.0
texture_normal = ExtResource( 3 )
expand = true

[node name="BlockButtonText" type="Label" parent="DictBench/BlockButton"]
margin_right = 152.0
margin_bottom = 64.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.141176, 0.0627451, 1 )
text = "字块列表"
align = 1
valign = 1

[node name="WordButton" type="TextureButton" parent="DictBench"]
margin_left = 336.0
margin_top = 192.0
margin_right = 488.0
margin_bottom = 256.0
texture_normal = ExtResource( 3 )
expand = true

[node name="WordButtonText" type="Label" parent="DictBench/WordButton"]
margin_right = 152.0
margin_bottom = 64.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.141176, 0.0627451, 1 )
text = "词目列表"
align = 1
valign = 1

[node name="ImportantButton" type="TextureButton" parent="DictBench"]
margin_left = 528.0
margin_top = 192.0
margin_right = 680.0
margin_bottom = 256.0
texture_normal = ExtResource( 3 )
expand = true

[node name="ImportantButtonText" type="Label" parent="DictBench/ImportantButton"]
margin_right = 152.0
margin_bottom = 64.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.141176, 0.0627451, 1 )
text = "重要词目"
align = 1
valign = 1

[node name="DictList" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="DictList"]
margin_left = 128.0
margin_top = 328.0
margin_right = 704.0
margin_bottom = 960.0
theme = ExtResource( 2 )
custom_colors/guide_color = Color( 0.47451, 0.333333, 0.282353, 1 )
custom_colors/font_color = Color( 0.831373, 0.631373, 0.372549, 1 )
custom_constants/hseparation = 30
custom_styles/cursor = SubResource( 1 )
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/cursor_unfocused = SubResource( 4 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_columns = 4
same_column_width = true

[node name="Title" type="Label" parent="."]
margin_left = 320.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 155.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "词典列表"
align = 1
valign = 1
